Changes:
* continue mixed-project swagger documentation
